test/simple/correct/ImportTwo.hs
module ImportTwo where

import ImportTwo1(x)
import ImportTwo2(y)

main = x + y
