test/simple/typeerrors/Edinburgh/Ex8.hs
module Ex8 where

f y (h:t) = t y
